pod-security/baseline/restrict-apparmor-profiles/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: unconfined
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: unconfined
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: runtime/default
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: localhost/foo
    spec:
      containers:
      - name: container01
        image: dummyimagename
